--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-.firebase
+.firebase/
+.github/workflows/
 .firebaserc
 Model Export Firebase/
 .github
